# bdm_voxel_builder

./: .gitattributes  .gitignore  README.md  environment.yml  mygrids.vdb  pyproject.toml  tasks.py
.github/workflows/: test.yaml
bdm_voxel_builder/: __init__.py  __main__.py  agent.py  config_setup.py  data_layer.py  empty_compas_viewer.py  environment.py  simulation_state.py  test.py
bdm_voxel_builder/agent_algorithms/: algo_10_a_slicer_agents.py  algo_10_b_slicer_agents.py  algo_11_test_scan_import.py  algo_5_reset.py  algo_5_test.py  algo_6_moisture.py  algo_7_queen_box.py  algo_8_b_build_on_2.py  algo_8_build_on.py  algo_8_c_build_on_3.py  algo_8_d__build_on_new.py  algo_8_d_build_fresh.py  algo_8_e_build_ridge.py  algo_8_f_build_ridge_overhang.py  algo_9_a__tower_up.py  algo_9_a_carve.py  base.py  common.py  readme_algo.md
bdm_voxel_builder/data_layer/: base.py  diffusive_layer.py  imported_layer.py
bdm_voxel_builder/grid/: ___init__.py  __init__.py  base.py  diffusive_grid.py  imported_layer.py
bdm_voxel_builder/helpers/: __init__.py  array.py  common.py  compas.py  file.py  geometry.py  math.py  numpy.py  pointcloud.py  savepaths.py  vdb.py  voxel.py
bdm_voxel_builder/visualizer/: base.py  compas_viewer.py  (+2 more)
data/: config.py  config_01_load_scan.py  config_02_solid_from_scan.py  config_03_build_grid.py  config_load_scan.py  config_slice.py  transformation_matrix_to_camera_frame_from_t_erratic.json  transformation_matrix_to_camera_frame_from_tool0.json
grasshopper/: path_planning.ghx
tests/: conftest.py  test_agent.py  test_run_with_config.py
(+155 files in other folders)
