[project]
name = "bdm-voxel-builder"
version = "0.1.0"
description = ""
authors = [
    { name = "Mangliár László", email = "mangliar.laci@gmail.com" },
    { name = "Anton Tetov", email = "anton@tetov.se" },
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-vv"


[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

[tool.setuptools]
# packages = ["bdm_voxel_builder", "compas_voxel_builder"]
package-dir = {"" = "src"}

[tool.vulture]
make_whitelist = false
paths = ["tests", "src"]
sort_by_size = true
verbose = false
